Quadrat: Fix mobile spacing (#3961)
* Quadrat: Fix mobile spacing

* reset indentation

* reset indentation

* move template rules into their own file

--- a/quadrat/sass/theme.scss
+++ b/quadrat/sass/theme.scss
@@ -19,12 +19,9 @@
 @import "colors";
 @import "elements/links";
 @import "elements/forms";
-@import "templates/header";
 @import "templates/footer";
+@import "templates/header";
+@import "templates/index";
 @import "templates/meta";
 @import "templates/post-header";
 @import "templates/query";
-
-.wp-block-post-featured-image {
-	margin-top: 0;
-}
